--- a/Test/.classpath
+++ b/Test/.classpath
@@ -3,5 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="poi-ooxml-schemas-3.10-FINAL.jar"/>
+	<classpathentry kind="lib" path="poi-3.10.1-sources.jar"/>
+	<classpathentry kind="lib" path="poi-3.10.1.jar"/>
+	<classpathentry kind="lib" path="poi-ooxml-3.10-FINAL.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
