--- a/Test/.classpath
+++ b/Test/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry kind="lib" path="poi-ooxml-3.10-FINAL.jar"/>
 	<classpathentry kind="lib" path="asm-3.3.jar"/>
 	<classpathentry kind="lib" path="cglib-2.2.2.jar"/>
+	<classpathentry kind="lib" path="jedis-2.1.0-sources.jar"/>
+	<classpathentry kind="lib" path="jedis-2.9.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
